<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/world_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/game_name"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_country"
        android:layout_width="140dp"
        android:layout_height="88dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="100dp"
        android:text="@string/country_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toEndOf="@+id/btn_flag" />

    <Button
        android:id="@+id/btn_flag"
        android:layout_width="140dp"
        android:layout_height="88dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:text="@string/flag_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_country"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_flag_score"
        android:layout_width="74dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_flag"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="@+id/btn_flag"
        app:layout_constraintTop_toBottomOf="@+id/btn_flag"
        app:srcCompat="@drawable/trophy" />

    <ImageView
        android:id="@+id/iv_outline_score"
        android:layout_width="74dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/btn_country"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="@+id/btn_country"
        app:layout_constraintTop_toBottomOf="@+id/btn_country"
        app:srcCompat="@drawable/trophy" />

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="36dp"
        android:layout_height="39dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_person" />

</androidx.constraintlayout.widget.ConstraintLayout>